# trenchcoat

./: Cargo.toml  README.md  aims.md  concurrency.md  libraries.md  rustfmt.toml  spec.md
src/: error.rs  errors.rs  exec.rs  files.rs  little_cache.rs  main.rs  proof.rs  test_input.tc  test_input_fails_graph.tc  token_tree.rs  tokens.rs
src/ast/: error.rs  errors.rs  expr.rs  item.rs  mod.rs  pat.rs  proof.rs  readable.rs  stmt.rs  tools.rs  types.rs  u8_to_str.rs
src/proof/: bound.rs  bound_group.rs  bound_method.rs  bound_method2.rs  dummy.rs  error.rs  examples.rs  expr.rs  fast_bound_method.rs  fast_optimiser.rs  graph.rs  int.rs  mod.rs  optimiser.rs  optimiser2.rs  sign.rs  term.rs  tests.rs
src/proof/fast_optimiser/: mod.rs
src/proof/optimiser/: mod.rs  options.rs
src/tokens/: auto_sep.rs  mod.rs
src/types/: mod.rs
src/verify/: error.rs  mod.rs  prover.rs
tokeniser/src/: position.rs
tokenizer/: input
tokenizer/src/: main.rs  position.rs  reader.rs
writeups/: bound-method.md  graph-method.md  project-structure.md  proof-overview.md
