[package]
name = "trenchcoat"
version = "0.2.0"
authors = ["Max Sharnoff <github@max.sharnoff.org>", "Jacob O'Toole <jacob.otoole1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd = "2.0"
ansi_term = "0.12"
unicode-width = "0.1.5"

[profile.test]
opt-level = 3

[features]
graph = []
bounds = []
dummy-prover = []
expr-simplify-debug = []
